--- a/css/PersonalPageStyles.css
+++ b/css/PersonalPageStyles.css
@@ -18,10 +18,10 @@
 
 .mainbody{
     right: 5px; 
-    left: 5px;
+    left: 5px; 
+}
+body{
     background-color: whitesmoke;
-    
-   
 }
 .footer{
     height: 20px;
